tests/paczka1/small_fuzzy/58257154.err
Error in line 1: pMk S847 71,3
Error in line 2: pMk A859 5,2
Error in line 7: pMk A89 0,8
Error in line 4: rDDTxUMAeD S847 12,4
Error in line 8: S0YNV A859 69,0
Error in line 9: pMk S994 90,7
